// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field should render [snapshot] 1`] = `
.emotion-8 {
  grid-column-start: span 1;
}

.emotion-2 {
  font-weight: bold;
  margin: 0;
  padding: 0;
}

.emotion-0 {
  color: #ccc;
  font-size: 12px;
  font-weight: bold;
  line-height: 12px;
  padding: 0 2px;
}

.emotion-6 {
  margin: 0;
  padding: 3px 0 0;
}

.emotion-4 {
  background-color: #fff;
  border: 1px solid #e7e7e7;
  border-radius: 3px;
  box-shadow: inset 0 1px 2px 0 rgba(0,0,0,0.2);
  color: #212121;
  display: block;
  font-size: 16px;
  line-height: 22px;
  padding: 11px 12px;
  width: 100%;
}

.emotion-4::-webkit-input-placeholder {
  color: #e0e7ee;
}

.emotion-4::-moz-placeholder {
  color: #e0e7ee;
}

.emotion-4:-ms-input-placeholder {
  color: #e0e7ee;
}

.emotion-4::placeholder {
  color: #e0e7ee;
}

.emotion-4:focus {
  border-color: #a43287;
}

<div
  class="emotion-8 emotion-9"
>
  <dt
    class="emotion-2 emotion-3"
  >
    <label
      class="emotion-0 emotion-1"
      for="field"
    >
      Label
      :
    </label>
  </dt>
  <dd
    class="emotion-6 emotion-7"
  >
    <input
      class="emotion-4 emotion-5"
      id="field"
    />
  </dd>
</div>
`;

exports[`Field should render with errors [snapshot] 1`] = `
.emotion-10 {
  grid-column-start: span 1;
}

.emotion-2 {
  font-weight: bold;
  margin: 0;
  padding: 0;
}

.emotion-0 {
  color: #ccc;
  font-size: 12px;
  font-weight: bold;
  line-height: 12px;
  padding: 0 2px;
}

.emotion-6 {
  margin: 0;
  padding: 3px 0 0;
}

.emotion-4 {
  background-color: #fff;
  border: 1px solid #f30;
  border-radius: 3px;
  box-shadow: inset 0 1px 2px 0 rgba(0,0,0,0.2);
  color: #212121;
  display: block;
  font-size: 16px;
  line-height: 22px;
  padding: 11px 12px;
  width: 100%;
}

.emotion-4::-webkit-input-placeholder {
  color: #e0e7ee;
}

.emotion-4::-moz-placeholder {
  color: #e0e7ee;
}

.emotion-4:-ms-input-placeholder {
  color: #e0e7ee;
}

.emotion-4::placeholder {
  color: #e0e7ee;
}

.emotion-4:focus {
  border-color: #a43287;
}

.emotion-8 {
  margin: 0;
  padding: 3px 0 0;
  color: #f30;
  font-size: 12px;
  line-height: 14px;
  padding-left: 2px;
  padding-right: 2px;
}

<div
  class="emotion-10 emotion-11"
>
  <dt
    class="emotion-2 emotion-3"
  >
    <label
      class="emotion-0 emotion-1"
      for="field"
    >
      Label
      :
    </label>
  </dt>
  <dd
    class="emotion-6 emotion-7"
  >
    <input
      class="emotion-4 emotion-5"
      id="field"
    />
  </dd>
  <dd
    class="emotion-8 emotion-9"
    data-testid="field-error"
  >
    Campo requerido.
  </dd>
</div>
`;
